--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,4 +1,4 @@
-name: Build project
+name: QA
 on:
   push:
     branches:
@@ -7,6 +7,14 @@ on:
     branches:
       - main
 jobs:
+  code-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install tools
+        run: sudo apt install clang-format
+      - uses: actions/checkout@v3
+      - name: clang-format
+        run: clang-format -Werror --dry-run --style=file *.c
   build:
     runs-on: ubuntu-latest
     container:
